--- a/practico.html
+++ b/practico.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctico</title>
+    <link rel="stylesheet" href="css/practico.css">
 </head>
 <body>
     <h1>Práctica de git</h1>
