inicio de la prueba con las ramas

--- a/practico.html
+++ b/practico.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="css/practico.css">
 </head>
 <body>
-    <h1>Práctica de git</h1>
-    <section>
-        <h2>Esta es la primera práctica de los cambios</h2>
-        <p>texto a modificar 1</p>
-        <p>texto a modificar 2</p>
-        <p>texto a modificar 3</p>
-    </section>
-    <section>
-        <ol>
-            <li>elemento 1</li>
-            <li>elemento 2</li>
-            <li>elemento 3</li>
-            <li>elemento 4</li>
-        </ol>
-    </section>
-</body>
+    <div class="container">
+        <h1>Práctica de git</h1>
+        <section>
+            <h2>Esta es la primera práctica de los cambios</h2>
+            <p>texto a modificar 1</p>
+            <p>texto a modificar 2</p>
+            <p>texto a modificar 3</p>
+        </section>
+        <section>
+            <ol>
+                <li>elemento 1</li>
+                <li>elemento 2</li>
+                <li>elemento 3</li>
+                <li>elemento 4</li>
+            </ol>
+        </section>
+    </div>
+    </body>
 </html>
