estructura inicial cabecera

--- a/practico.html
+++ b/practico.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div id="cabecera">
+            <h2>cabecera</h2>
+        </div>
         <h1>Práctica de git</h1>
         <section>
             <h2>Esta es la primera práctica de los cambios</h2>
