--- a/practico.html
+++ b/practico.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            <h2>cabecera</h2>
+            <h2>Cabecera</h2>
         </div>
-        <h1>Práctica de git</h1>
+        <h1 class="cabeza">Práctica de git</h1>
         <section>
             <h2>Esta es la primera práctica de los cambios</h2>
             <p>texto a modificar 1</p>
