--- a/practico.html
+++ b/practico.html
@@ -23,6 +23,7 @@
                 <li>elemento 4</li>
             </ol>
         </section>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
     </div>
     </body>
 </html>
