Cambio super notable para probar las llaves SSH

--- a/practico.html
+++ b/practico.html
@@ -13,7 +13,7 @@
         </div>
         <h1 class="cabeza">Práctica de git</h1>
         <section>
-            <h2>Esta es la primera práctica de los cambios</h2>
+            <h2>Un cambio notable</h2>
             <p>texto a modificar 1</p>
             <p>texto a modificar 2</p>
             <p>texto a modificar 3</p>
