cambio del color de fondo y otros estilos pequeños

--- a/practico.html
+++ b/practico.html
@@ -26,7 +26,9 @@
                 <li>elemento 4</li>
             </ol>
         </section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
+        <article class="parrafos">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
+        </article>
     </div>
     </body>
 </html>
