Cambio del título principal y otros detalles

--- a/practico.html
+++ b/practico.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            <h2>Cabecera</h2>
+            <h1>Super título del mejor blog del mundo</h1>
         </div>
-        <h1 class="cabeza">Práctica de git</h1>
+        <h2 class="cabeza">Práctica de git</h2>
         <section>
             <h2>Un cambio notable</h2>
             <p>texto a modificar 1</p>
