Más contenido y modificación de algunos estilos

--- a/practico.html
+++ b/practico.html
@@ -28,6 +28,9 @@
         </section>
         <article class="parrafos">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
         </article>
     </div>
     </body>
