--- a/practico.html
+++ b/practico.html
@@ -29,6 +29,11 @@
         <article class="parrafos">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis libero esse assumenda provident officiis tempora tempore, aperiam, voluptates aspernatur magni exercitationem suscipit sint. Dolore ipsa fugit vitae labore alias ex?</p>
         </article>
+        
+        <footer class="pie">
+            <p>un footer bien bonito</p>
+        </footer>
     </div>
+    
     </body>
 </html>
